// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`real-life: 00: real-life 1`] = `
"
  desiredWeight=166584229.33333334
===
  m1: sum=0          (0.00%) []
  m2: sum=157257435  (15.73%) [3102510,2310389,3431636,2812913,2809915,3373267,3533675,2904572,3028968,3763126,3330395,5513279,4499457,2620674,4204222,3068099,4044060,2590400,3398307,3549054,2705941,2446029,2543947,3043896,3185788,3687653,3011137,3123301,2968407,2878138,4008534,2606604,3583219,3103622,3296268,2898755,3429745,2704922,3047716,4353234,2977721,2952326,3165026,5621594,2866982,2963043,3029183,3165786]
  m3: sum=0          (0.00%) []
  m4: sum=179966429  (18.01%) [2941652,2259896,2897068,2441056,2173301,2557906,3189854,3262413,3596507,2850071,2742650,3007119,3146139,2732076,2782602,2843946,2971959,2650268,4630436,2509163,2823596,2496160,4094308,3715544,3780254,2473756,3902806,3177622,2752508,2610157,2460287,3588799,3315124,3386548,2841916,3389682,2882752,2721151,2898093,2891522,3063611,2924353,3016623,2736916,2567722,2250799,3290465,2302616,3266051,2737137,3368923,2739823,2457847,2588240,3388789,3253895,2748270,2490298,3042848,2685534,2657002]
  m5: sum=330387698  (33.06%) [2402111,3635241,3494375,4003589,2644282,3792954,3031608,2736750,11682545,2537989,2789315,3576189,2573423,2999839,3195822,2850765,3003699,2800095,3373183,3192320,2466714,3070357,2320580,2835098,3759990,2856268,2578693,2924938,4521645,2940125,3526950,2532835,2867802,2786013,3572643,3286283,4558305,6562024,3357344,2560850,3622079,2700293,2638270,2358971,2690906,2737271,2679169,2896335,5173294,3241496,2641623,2708660,3026319,3018266,2776485,3897435,3933529,2839020,3071322,4652406,3633723,3720616,3242648,2349381,2801277,3116048,3872269,3145946,2958505,3479378,4414286,3757053,2871581,2612754,2440424,2705234,3717549,4245181,3699579,2762198,2877770,2926338,3206583,3513134,2683638,2673500,2367037,2968401,3413508,2307521,3420950,2500139,2308110,2532689,2875158,3639822,2573277,2886183,3512852,3652854,3666576,2831328]
  m6: sum=331893814  (33.21%) [3210829,2599238,3261651,3013344,2994142,2817397,2914849,3466772,2798274,3160658,4189071,60846732,2774519,2921195,3273649,2762413,3398789,5174865,3458114,3212180,3243874,2420268,2914613,3460018,3238051,3099167,3156420,3208024,3609000,3743240,3784360,2959994,2997000,3412687,2478898,3143575,3009686,3180545,3334735,3322849,3031021,2760785,3364934,2902034,2752392,3147604,2464625,2488516,2844696,3120980,2783978,3106528,2295123,3116163,2671385,2900650,2700870,2613138,2724027,3489817,3009028,3005714,2825044,2761433,2746928,4153615,3035247,3166575,3125205,3486267,3436957,2730814,3037462,3305552,2706198,2957812,3715174,3008117,3177874,2779452,3149109,2842873,3746175,3403372,2711371,3976340,3468210,3180945]
==>
  m1: sum=165347627  (16.54%) [3635241,4003589,3576189,3526950,3622079,3933529,3242648,3872269,3479378,4414286,3757053,3717549,3699579,3420950,3512852,3652854,3466772,4189071,60846732,3273649,3398789,3458114,3212180,3743240,3784360,3412687,3334735,3364934,3489817,3305552]
  m2: sum=166595628  (16.67%) [3102510,2310389,3431636,2812913,2809915,3373267,3533675,2904572,3028968,3763126,3330395,5513279,4499457,2620674,4204222,3068099,4044060,2590400,3398307,3549054,2705941,2446029,2543947,3043896,3185788,3687653,3011137,3123301,2968407,2878138,4008534,2606604,3583219,3103622,3296268,2898755,3429745,2704922,3047716,4353234,2977721,2952326,3165026,5621594,2866982,2963043,3029183,3165786,2856268,3243874,3238051]
  m3: sum=166707360  (16.68%) [2259896,2173301,4630436,2250799,2302616,3494375,3792954,11682545,3373183,3759990,4521645,3572643,3286283,4558305,6562024,3357344,5173294,3241496,3897435,4652406,3633723,3720616,4245181,3206583,3513134,3413508,2307521,2308110,3639822,3666576,3261651,5174865,3460018,3609000,3322849,2295123,4153615,3486267,3436957,3715174,3746175,3403372,3976340,3468210]
  m4: sum=166349381  (16.64%) [2941652,2897068,2441056,2557906,3189854,3262413,3596507,2850071,2742650,3007119,3146139,2732076,2782602,2843946,2971959,2650268,2509163,2823596,2496160,4094308,3715544,3780254,2473756,3902806,3177622,2752508,2610157,2460287,3588799,3315124,3386548,2841916,3389682,2882752,2721151,2898093,2891522,3063611,2924353,3016623,2736916,2567722,3290465,3266051,2737137,3368923,2739823,2457847,2588240,3388789,3253895,2748270,2490298,3042848,2685534,2657002]
  m5: sum=165883739  (16.60%) [2402111,2644282,3031608,2736750,2537989,2789315,2573423,2999839,3195822,2850765,3003699,2800095,3192320,2466714,3070357,2320580,2835098,2578693,2924938,2940125,2532835,2867802,2786013,2560850,2700293,2638270,2358971,2690906,2737271,2679169,2896335,2641623,2708660,3026319,3018266,2776485,2839020,3071322,2349381,2801277,3116048,3145946,2958505,2871581,2612754,2440424,2705234,2762198,2877770,2926338,2683638,2673500,2367037,2968401,2500139,2532689,2875158,2573277,2886183,2831328]
  m6: sum=168621641  (16.87%) [3210829,2599238,3013344,2994142,2817397,2914849,2798274,3160658,2774519,2921195,2762413,2420268,2914613,3099167,3156420,3208024,2959994,2997000,2478898,3143575,3009686,3180545,3031021,2760785,2902034,2752392,3147604,2464625,2488516,2844696,3120980,2783978,3106528,3116163,2671385,2900650,2700870,2613138,2724027,3009028,3005714,2825044,2761433,2746928,3035247,3166575,3125205,2730814,3037462,2706198,2957812,3008117,3177874,2779452,3149109,2842873,2711371,3180945]
===
  77 move(s):
  - m4->m3: [2259896,2173301,4630436,2250799,2302616]
  - m5->m1: [3635241,4003589,3576189,3526950,3622079,3933529,3242648,3872269,3479378,4414286,3757053,3717549,3699579,3420950,3512852,3652854]
  - m5->m3: [3494375,3792954,11682545,3373183,3759990,4521645,3572643,3286283,4558305,6562024,3357344,5173294,3241496,3897435,4652406,3633723,3720616,4245181,3206583,3513134,3413508,2307521,2308110,3639822,3666576]
  - m5->m2: [2856268]
  - m6->m3: [3261651,5174865,3460018,3609000,3322849,2295123,4153615,3486267,3436957,3715174,3746175,3403372,3976340,3468210]
  - m6->m1: [3466772,4189071,60846732,3273649,3398789,3458114,3212180,3743240,3784360,3412687,3334735,3364934,3489817,3305552]
  - m6->m2: [3243874,3238051]
"
`;

exports[`synthetic: 01: empty 1`] = `
"
  desiredWeight=0
===
==>
===
  0 move(s):
"
`;

exports[`synthetic: 02: no-op 1 1`] = `
"
  desiredWeight=1
===
  m1: sum=1          (100.00%) [1]
==>
  m1: sum=1          (100.00%) [1]
===
  0 move(s):
"
`;

exports[`synthetic: 03: no-op 2 1`] = `
"
  desiredWeight=0.5
===
  m1: sum=1          (100.00%) [1]
  m2: sum=0          (0.00%) []
==>
  m1: sum=1          (100.00%) [1]
  m2: sum=0          (0.00%) []
===
  0 move(s):
"
`;

exports[`synthetic: 04: no-op 2 1`] = `
"
  desiredWeight=0.5
===
  m1: sum=0          (0.00%) []
  m2: sum=1          (100.00%) [1]
==>
  m1: sum=0          (0.00%) []
  m2: sum=1          (100.00%) [1]
===
  0 move(s):
"
`;

exports[`synthetic: 05: move smallest out 1`] = `
"
  desiredWeight=1.5
===
  m1: sum=3          (100.00%) [1,2]
  m2: sum=0          (0.00%) []
==>
  m1: sum=2          (66.67%) [2]
  m2: sum=1          (33.33%) [1]
===
  1 move(s):
  - m1->m2: [1]
"
`;

exports[`synthetic: 06: move largest out 1`] = `
"
  desiredWeight=6
===
  m1: sum=12         (100.00%) [1,2,3,6]
  m2: sum=0          (0.00%) []
==>
  m1: sum=6          (50.00%) [1,2,3]
  m2: sum=6          (50.00%) [6]
===
  1 move(s):
  - m1->m2: [6]
"
`;

exports[`synthetic: 07: move many small out 1`] = `
"
  desiredWeight=6.5
===
  m1: sum=13         (100.00%) [1,2,3,7]
  m2: sum=0          (0.00%) []
==>
  m1: sum=6          (46.15%) [1,2,3]
  m2: sum=7          (53.85%) [7]
===
  1 move(s):
  - m1->m2: [7]
"
`;

exports[`synthetic: 08: huge shards 1`] = `
"
  desiredWeight=2023
===
  m1: sum=10115      (100.00%) [10000,100,1,2,3,4,5]
  m2: sum=0          (0.00%) []
  m3: sum=0          (0.00%) []
  m4: sum=0          (0.00%) []
  m5: sum=0          (0.00%) []
==>
  m1: sum=10000      (98.86%) [10000]
  m2: sum=100        (0.99%) [100]
  m3: sum=5          (0.05%) [5]
  m4: sum=4          (0.04%) [4]
  m5: sum=6          (0.06%) [1,2,3]
===
  6 move(s):
  - m1->m2: [100]
  - m1->m5: [1,2,3]
  - m1->m4: [4]
  - m1->m3: [5]
"
`;

exports[`synthetic: 09: zero-weight shards only 1`] = `
"
  desiredWeight=0
===
  m1: sum=0          (0.00%) [0,0,0,0,0,0,0,0,0,0]
  m2: sum=0          (0.00%) []
  m3: sum=0          (0.00%) []
  m4: sum=0          (0.00%) []
==>
  m1: sum=0          (0.00%) [0,0,0]
  m2: sum=0          (0.00%) [0,0,0]
  m3: sum=0          (0.00%) [0,0]
  m4: sum=0          (0.00%) [0,0]
===
  7 move(s):
  - m1->m2: [0,0,0]
  - m1->m3: [0,0]
  - m1->m4: [0,0]
"
`;

exports[`synthetic: 10: zero-weight shards and non-empty 1`] = `
"
  desiredWeight=5.25
===
  m1: sum=21         (100.00%) [1,2,3,4,5,6,0,0,0,0,0]
  m2: sum=0          (0.00%) []
  m3: sum=0          (0.00%) []
  m4: sum=0          (0.00%) []
==>
  m1: sum=4          (19.05%) [4,0,0]
  m2: sum=6          (28.57%) [6,0]
  m3: sum=5          (23.81%) [5,0]
  m4: sum=6          (28.57%) [1,2,3,0]
===
  8 move(s):
  - m1->m4: [1,2,3,0]
  - m1->m3: [5,0]
  - m1->m2: [6,0]
"
`;

exports[`synthetic: 11: decommission of one 1`] = `
"
  desiredWeight=7
===
  m1: sum=3          (14.29%) [1,2]
  m2: sum=7          (33.33%) [3,4]
  m3: sum=11         (52.38%) [5,6]
==>
  m1: sum=12         (57.14%) [1,2,3,6]
  m2: sum=0          (0.00%) []
  m3: sum=9          (42.86%) [4,5]
===
  3 move(s):
  - m2->m1: [3]
  - m2->m3: [4]
  - m3->m1: [6]
"
`;

exports[`synthetic: 12: decommission of two 1`] = `
"
  desiredWeight=7
===
  m1: sum=3          (14.29%) [1,2]
  m2: sum=7          (33.33%) [3,4]
  m3: sum=11         (52.38%) [5,6]
==>
  m1: sum=0          (0.00%) []
  m2: sum=0          (0.00%) []
  m3: sum=21         (100.00%) [1,2,3,4,5,6]
===
  4 move(s):
  - m1->m3: [1,2]
  - m2->m3: [3,4]
"
`;

exports[`synthetic: 13: two zero weight and two equal weight 1`] = `
"
  desiredWeight=67
===
  m1: sum=268        (100.00%) [0,134,134,0]
  m2: sum=0          (0.00%) []
  m3: sum=0          (0.00%) []
  m4: sum=0          (0.00%) []
==>
  m1: sum=134        (50.00%) [0,134]
  m2: sum=134        (50.00%) [134,0]
  m3: sum=0          (0.00%) []
  m4: sum=0          (0.00%) []
===
  2 move(s):
  - m1->m2: [134,0]
"
`;
